# CoffeeMatrix

./: meson.build
include/event/: event.h  roomaliasesevent.h  roomcanonicalaliasevent.h  roomcreateevent.h  roomjoinrulesevent.h
src/event/: event.cpp  roomaliasesevent.cpp  roomcanonicalaliasevent.cpp  roomcreateevent.cpp  roomjoinrulesevent.cpp
